feat: allow multiple auth sources per user (#500,#477)
