# internal/app/api/core/assets/doc/v0_swagger.json
@@ -2676,6 +2676,12 @@
                 "ApiTokenCreated": {
                     "type": "string"
                 },
+                "AuthSources": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "Department": {
                     "type": "string"
                 },
@@ -2719,13 +2725,10 @@
                 "PeerCount": {
                     "type": "integer"
                 },
+                "PersistLocalChanges": {
+                    "type": "boolean"
+                },
                 "Phone": {
-                    "type": "string"
-                },
-                "ProviderName": {
-                    "type": "string"
-                },
-                "Source": {
                     "type": "string"
                 }
             }
